--- a/team/Makefile
+++ b/team/Makefile
@@ -3,14 +3,14 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: yongmipa <yongmipa@student.42seoul.kr>     +#+  +:+       +#+         #
+#    By: suhwpark <suhwpark@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/12/16 17:14:23 by yongmipa          #+#    #+#              #
-#    Updated: 2023/05/03 17:58:38 by yongmipa         ###   ########seoul.kr   #
+#    Updated: 2023/05/16 17:31:40 by suhwpark         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME		= so_long
+NAME		= cub3D
 
 CC			= cc
 FLAGS		= -Wall -Werror -Wextra
@@ -20,30 +20,39 @@ RM			= rm -f
 INCS_DIR	= ./includes/
 SRCS_DIR	= ./src/
 LIB_DIR		= ./libft/
-MLX_DIR		= ./mlx/
+# MLX_DIR		= ./mlx/
 
 LIB_NAME	= ./libft/libft.a
 INCS		= -I includes
-MLX_FLAGS	= -L./mlx -lmlx -framework OpenGL -framework Appkit
+#MLX_FLAGS	= -L./mlx -lmlx -framework OpenGL -framework Appkit
 
-SRC			=	main.c init.c validate.c parsing.c draw.c press_key.c error.c get_next_line.c dfs.c
-SRCS		=	$(addprefix $(SRCS_DIR), $(SRC))
+SRC			=	get_next_line.c \
+				queue_utils.c queue_utils2.c \
+				utils.c \
+				map_validate_1.c \
+				main.c\
+				map_validate_2.c \
+				use_bfs.c \
+
 LIBS		=	$(addprefix $(LIB_DIR), $(LIB_NAME))
+SRCS		=	$(addprefix $(SRCS_DIR), $(SRC))
 OBJS		=	$(SRCS:.c=.o)
 
 all : $(NAME)
 
 $(NAME) : $(OBJS)
 	make -C $(LIB_DIR)
-	make -C $(MLX_DIR)
-	$(CC) -o $(NAME) $(OBJS) -L $(LIB_DIR) -lft -I $(INCS_DIR) -L $(MLX_DIR) -lmlx -framework OpenGL -framework Appkit
+# make -C $(MLX_DIR)
+	$(CC) -o $(NAME) $(OBJS) -L $(LIB_DIR) -lft -I $(INCS_DIR)
+# -L
+# $(MLX_DIR) -lmlx -framework OpenGL -framework Appkit
 
 %.o : %.c
 	$(CC) $(FLAGS) -c $< -o $@
 
 clean :
 	make -C $(LIB_DIR) clean
-	make -C $(MLX_DIR) clean
+# make -C $(MLX_DIR) clean
 	$(RM) $(OBJS)
 
 fclean : clean
