--- a/team2/Makefile
+++ b/team2/Makefile
@@ -6,14 +6,14 @@
 #    By: yongmipa <yongmipa@student.42seoul.kr>     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/12/16 17:14:23 by yongmipa          #+#    #+#              #
-#    Updated: 2023/05/19 15:56:07 by yongmipa         ###   ########seoul.kr   #
+#    Updated: 2023/05/22 16:39:38 by yongmipa         ###   ########seoul.kr   #
 #                                                                              #
 # **************************************************************************** #
 
 NAME		= cub3D
 
 CC			= cc
-FLAGS		= -Wall -Werror -Wextra
+FLAGS		= -Wall -Werror -Wextra -g3
 AR			= ar rcs
 RM			= rm -f
 
@@ -37,7 +37,9 @@ SRC			=	get_next_line.c \
 				initialize.c \
 				map_valid_utils.c \
 				map_context_check.c \
-				map_wall_check.c
+				map_wall_check.c \
+				key_handle.c \
+				raycatsing.c \
 
 LIBS		=	$(addprefix $(LIB_DIR), $(LIB_NAME))
 SRCS		=	$(addprefix $(SRCS_DIR), $(SRC))
